--- a/resources/dynamic/standard_multiple.html
+++ b/resources/dynamic/standard_multiple.html
@@ -6,7 +6,7 @@ Dim inputId
 Dim image
 Dim attrChecked
 Dim isExclusive
-Dim par = CurrentQuestion.ParentLoop.AvailableResponses
+Dim par = CurrentQuestion.ParentLoop.Answers
 
 Dim j
 For j = 1 To par.Count 
