--- a/resources/dynamic/fallback_single_horizontal.html
+++ b/resources/dynamic/fallback_single_horizontal.html
@@ -2,7 +2,7 @@
 {% 
 Dim i 
 Dim j
-Dim ar = CurrentQuestion.ParentLoop.AvailableResponses
+Dim ar = CurrentQuestion.ParentLoop.Answers
 Dim inputName = CurrentQuestion.InputName()
 Dim inputId
 Dim inputValue
