--- a/resources/dynamic/fallback_single_vertical.html
+++ b/resources/dynamic/fallback_single_vertical.html
@@ -28,7 +28,7 @@ For i = 1 To ar.Count
 %}
 <tr><td align="center">
     	{% IF (resource <> "") Then %}
-			<img src="{%= resource %}" width="{%= imageWidth %}" />
+			<img src="{%= resource %}" width="{%= imageWidth %}" alt="{%:= caption %}" />
 		{% EndIf %}
     	<p>{%:= caption %}</p>
 	</td>
