--- a/resources/dynamic/standard_single.html
+++ b/resources/dynamic/standard_single.html
@@ -43,7 +43,7 @@ For j = 1 To ar.Count
                 <div class="response_text">{%:= caption %}</div>
             {% EndIF %}
             {% IF image <> "" Then %}
-                <img src="{%= image %}" />
+                <img src="{%= image %}" alt="{%:= caption %}" />
             {% EndIF %}
             {% IF CurrentADC.PropValue("responseTextPosition") = "bottom" or CurrentADC.PropValue("responseTextPosition") = "right" Then %}
                 <div class="response_text">{%:= caption %}</div>
@@ -72,7 +72,7 @@ For j = 1 To ar.Count
         <div class="response_text">{%:= caption %}</div>
     {% EndIF %}
     {% IF image <> "" Then %}
-        <img src="{%= image %}" />
+        <img src="{%= image %}" alt="{%:= caption %}" />
     {% EndIF %}
 	{% IF CurrentADC.PropValue("responseTextPosition") = "bottom" or CurrentADC.PropValue("responseTextPosition") = "right" Then %}
         <div class="response_text">{%:= caption %}</div>
@@ -103,12 +103,12 @@ For j = 1 To ar.Count
         
         %}
         <div class="resMini{%=j-1%} responseItemMini" data-index="{%=j-1%}" style="display:none;">
-            <div class="cross"><img src="{%:= CurrentADC.URLTo("static/delete32.png") %}" /></div>
+            <div class="cross"><img src="{%:= CurrentADC.URLTo("static/delete32.png") %}" alt="delete"/></div>
             {% IF CurrentADC.PropValue("responseTextPosition") = "top" or CurrentADC.PropValue("responseTextPosition") = "left" Then %}
                 <div class="response_text">{%:= caption %}</div>
             {% EndIF %}
             {% IF image <> "" Then %}
-                <img src="{%= image %}" />
+                <img src="{%= image %}" alt="{%:= caption %}" />
             {% EndIF %}
             {% IF CurrentADC.PropValue("responseTextPosition") = "bottom" or CurrentADC.PropValue("responseTextPosition") = "right" Then %}
                 <div class="response_text">{%:= caption %}</div>
